Fix #2922: Hide hamburger menu >768px, add function to handle navbar overflow (#2927)
* Change global navbar cutoff width to 768px

* Add function to navigation bar directive to handle overflow on load/resize

* Specify width for oppia logo in CSS so that it can't cause overflow if loaded after the handle overflow function runs

* fix linting errors

* fix linting error

* Address review comments: rename vars/functions, use debouncer service, ng-show.

* Split into functions, add docstring.

* Reduce line lengths to fix linting errors.

* Address review comments: use for..in instead of jQuery.

* wip

* wip: test converting navbar from float to inline-block

* wip: convert navbar to inline-block

* wip: convert navbar to inline-block

* Remove unneeded jQuery use.

* Simplify isWindowNarrow in windowDimensionsService.

* Move added CSS out of min-width block.

* Update debounce service.

* Fix linting errors.

* Update docstring/comments.

* Add class to navbar tab content elements for use in selecting from javascript.

* Remove unused return value.

* Address review comment: add comma.

* Fix navbar on small screens in exploration player.

* Implement simple editor tools for width 768~1023px in exploration editor.

* Address review comments: more verbose comments, remove unneeded comment.

* Remove extra line from merge.

* Add array to explicitly define order of importance, add broadcast for library searchbar loaded.

* Fix linting error.

* Derive navElementsVisibilityStatus object from order array.

* Fix incorrect merge.

* Fix incorrect merge.

* Address review comment: declare NAV_ELEMENTS_ORDER as constant.

* Address review comment: Add full stop in comment.

* Move code to proper place.

* Fix linting errors.

* Change breakpoints for library/search category/language menus to 768/1024px.

* Address review comments: add/edit comments, add missing var.

* Remove extra create-activity s

--- a/core/templates/dev/head/css/oppia.css
+++ b/core/templates/dev/head/css/oppia.css
@@ -2531,27 +2531,31 @@ div#ng-curtain {
 }
 .oppia-logo-wide {
   margin-left: 25px;
+  width: 90px;
 }
 .oppia-logo-small {
   margin-left: 6px;
 }
 
-@media (min-width: 500px) {
-  .oppia-navbar-tabs-narrow {
-    /*
-      This needs to take i18n of the "Create" and "Sign in" buttons into
-      account.
-    */
-    min-width: 260px;
-  }
-  .oppia-navbar-tabs {
-    /*
-      This needs to take i18n of the "Create" and "Sign in" buttons into
-      account.
-    */
-    min-width: 580px;
-  }
+.oppia-navbar-tabs {
+  white-space: nowrap;
 }
+.nav, .oppia-navbar-tabs > li, .oppia-navbar-tabs > create-activity-button {
+  display: inline-block;
+  vertical-align: top;
+}
+.oppia-navbar-clickable-dropdown:hover ul.dropdown-menu, .oppia-clickable-navbar-element:hover {
+  display: inline-block;
+}
+.oppia-navbar-nav .dropdown-menu {
+  left: auto;
+  right: 0;
+}
+.navbar-header {
+  /* Prevent whitespace from inline-block elements from adding space. */
+  font-size: 0;
+}
+
 .nav > li > a.oppia-navbar-tab {
   font-family: "Capriola", "Roboto", Arial, sans-serif;
   font-size: 14px;
